[package]
name = "glowygraph"
version = "0.7.3"
description = "A library for drawing glowy graphs"
documentation = "https://docs.rs/glowygraph/"
repository = "https://github.com/vadixidav/glowygraph/"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["graph", "glow", "glowy", "render", "draw"]
license = "Unlicense"

[dependencies]
glium = "0.15"
num = "0.1"
nalgebra = "0.10"
rand = "0.3"
rustc-serialize = "0.3"
