[package]
name = "glowygraph"
version = "0.8.0"
description = "A library for drawing glowy graphs"
documentation = "https://docs.rs/glowygraph/"
repository = "https://github.com/vadixidav/glowygraph/"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["graph", "glow", "glowy", "render", "draw"]
license = "Unlicense"

[dependencies]
glium = "0.20"
cgmath = "0.16"

[dev-dependencies]
rand = "0.4"
